--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 
 <html lang="english">
   <head>
-    <title>exported project</title>
+    <title>YEETER!!!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
@@ -30,6 +30,12 @@
     <link
       rel="stylesheet"
       href="https://unpkg.com/animate.css@4.1.1/animate.css"
+    />
+    <link
+      rel="shortcut icon"
+      href="/yeeter logo - brand colors.png"
+      type="icon/png"
+      sizes="32x32"
     />
     <link
       rel="stylesheet"
